@@ -4,6 +4,8 @@
 1.34 (not yet released)
    *    (ms) InternalDebug now replaces all instances of INTERNAL_DEBUG,
              not just the first one.
+   *    (ms) Added test case for get_logger() with a ref() on the actual
+             object instead of on a static category. Updated docs.
 
 1.33 (2011/05/31)
    *    (ms) [RT 67132] Applied patch by Darin McBride to allow for
